--- a/dingo/res/layout/lista_cozinha.xml
+++ b/dingo/res/layout/lista_cozinha.xml
@@ -6,18 +6,13 @@
 		android:background="@drawable/icon" android:id="@+id/BTChamaMicroondas"></Button>
 	<Button android:background="@drawable/icon"
 		android:layout_height="wrap_content" android:layout_width="wrap_content"
-		android:layout_x="181dp" android:layout_y="117dp" android:id="@+id/BTChamaGeladeira"></Button>
-	<Button android:background="@drawable/icon"
-		android:layout_height="wrap_content" android:layout_width="wrap_content"
 		android:layout_x="35dp" android:layout_y="242dp" android:id="@+id/BTChamaBatedeira"></Button>
-	<Button android:background="@drawable/icon"
-		android:layout_height="wrap_content" android:layout_width="wrap_content"
-		android:layout_x="187dp" android:layout_y="242dp" android:id="@+id/BTChamaLampCozinha"></Button>
-	<Button android:layout_height="wrap_content"
-		android:layout_width="wrap_content" android:layout_x="130dp" android:text="Voltar" android:layout_y="409dp" android:id="@+id/BTCozinhaVoltar"></Button>
 	<TextView android:textColor="#000000" android:text="AparelhosCozinha" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_x="66dp" android:layout_y="16dp"></TextView>
 	<TextView android:textColor="#000000" android:text="Microondas" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="16dp" android:layout_y="91dp"></TextView>
-	<TextView android:textColor="#000000" android:text="Geladeira" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="170dp" android:layout_y="94dp"></TextView>
 	<TextView android:textColor="#000000" android:text="Batedeira" android:layout_height="wrap_content" android:id="@+id/TextView02" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="25dp" android:layout_y="218dp"></TextView>
-	<TextView android:textColor="#000000" android:text="Lâmpada" android:layout_height="wrap_content" android:id="@+id/TextView03" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="178dp" android:layout_y="216dp"></TextView>
+	<Button android:id="@+id/BTChamaGeladeira" android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_x="222dp" android:layout_y="117dp"></Button>
+	<TextView android:text="Geladeira" android:layout_height="wrap_content" android:id="@+id/TextView01" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_x="209dp" android:layout_y="90dp"></TextView>
+	<TextView android:text="Lâmpada" android:layout_height="wrap_content" android:id="@+id/TextView03" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_x="214dp" android:layout_y="216dp"></TextView>
+	<Button android:id="@+id/BTChamaLampCozinha" android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_x="228dp" android:layout_y="240dp"></Button>
+	<Button android:id="@+id/BTCozinhaVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="248dp" android:layout_y="324dp"></Button>
 </AbsoluteLayout>
