--- a/dingo/res/layout/ajuda.xml
+++ b/dingo/res/layout/ajuda.xml
@@ -7,6 +7,6 @@
     <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="Dingo - Simulador de Gastos Elétricos" android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="8dp"></TextView>
     <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="Tarifa local:" android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_x="15dp" android:layout_y="65dp"></TextView>
     <EditText android:inputType="number" android:layout_height="wrap_content" android:layout_width="93dp" android:layout_x="118dp" android:layout_y="54dp" android:id="@+id/EDITTarifa"></EditText>
-    <Button android:layout_height="wrap_content" android:text="Voltar" android:layout_width="wrap_content" android:layout_x="132dp" android:layout_y="422dp" android:id="@+id/BTAjudaVoltar"></Button>
+    <Button android:id="@+id/BTAjudaVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="129dp" android:layout_y="324dp"></Button>
     
 </AbsoluteLayout>
