--- a/dingo/res/layout/batedeira.xml
+++ b/dingo/res/layout/batedeira.xml
@@ -3,12 +3,12 @@
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgbatedeira">
 	<TextView android:textColor="#000000" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Batedeira" android:layout_width="wrap_content" android:layout_x="108dp" android:layout_y="8dp"></TextView>
 	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<Button android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Voltar" android:layout_x="124dp" android:layout_y="430dp" android:id="@+id/BTBatedeiraVoltar"></Button>
 	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBatedeiraTempo"></EditText>
-	<EditText android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="129dp" android:id="@+id/EDITBatedeiraPotencia">
-		
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraPotencia" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="109dp"></EditText>
+	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraQuant" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="168dp">
+		<requestFocus></requestFocus>
 	</EditText>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="207dp" android:id="@+id/EDITBatedeiraQuant"></EditText>
-	<TextView android:textColor="#000000" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="Quantidade:" android:layout_width="wrap_content" android:layout_x="11dp" android:layout_y="222dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Potência:" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="145dp"></TextView>
+	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="184dp"></TextView>
+	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="125dp"></TextView>
+	<Button android:id="@+id/BTBatedeiraVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:layout_x="118dp" android:layout_y="321dp"></Button>
 </AbsoluteLayout>
