--- a/dingo/res/layout/dvd.xml
+++ b/dingo/res/layout/dvd.xml
@@ -2,13 +2,13 @@
 <AbsoluteLayout android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgdvd">
 	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Voltar" android:layout_x="124dp" android:layout_y="430dp" android:id="@+id/BTDVDVoltar"></Button>
 	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITDVDTempo"></EditText>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="129dp" android:id="@+id/EDITDVDPotencia">
-		
+	<TextView android:text="DVD" android:layout_height="wrap_content" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_x="142dp" android:layout_y="8dp"></TextView>
+	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITDVDPotencia" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="112dp">
+	
 	</EditText>
-	<EditText  android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="207dp" android:id="@+id/EDITDVDQuant"></EditText>
-	<TextView  android:textColor="#000000" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="Quantidade:" android:layout_width="wrap_content" android:layout_x="11dp" android:layout_y="222dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Potência:" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="145dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="DVD" android:layout_width="wrap_content" android:layout_x="127dp" android:layout_y="8dp"></TextView>
+	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITDVDQuant" android:layout_width="181dp" android:layout_x="108dp" android:layout_y="176dp"></EditText>
+	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="192dp"></TextView>
+	<Button android:id="@+id/BTDVDVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="245dp" android:layout_y="317dp"></Button>
+	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="126dp"></TextView>
 </AbsoluteLayout>
