--- a/dingo/res/layout/inicio.xml
+++ b/dingo/res/layout/inicio.xml
@@ -5,13 +5,13 @@
   android:layout_width="fill_parent"
   android:background="@drawable/bgcasa"
   android:layout_height="fill_parent" android:weightSum="1">
-    <Button android:id="@+id/BTChamaSala" android:layout_height="55dp" android:text="Sala" android:layout_width="211dp" android:layout_x="54dp" android:layout_y="96dp"></Button>
-    <Button android:id="@+id/BTChamaQuarto" android:layout_height="55dp" android:text="Quarto" android:layout_width="211dp" android:layout_x="54dp" android:layout_y="162dp"></Button>
-    <Button android:id="@+id/BTChamaCozinha" android:layout_height="55dp" android:text="Cozinha" android:layout_width="211dp" android:layout_x="54dp" android:layout_y="223dp"></Button>
-    <Button android:id="@+id/BTChamaBanheiro" android:layout_height="55dp" android:text="Banheiro" android:layout_width="211dp" android:layout_x="54dp" android:layout_y="285dp"></Button>
-    <Button android:id="@+id/BTVoltar" android:layout_height="wrap_content" android:text="Voltar" android:layout_width="75dp" android:layout_x="131dp" android:layout_y="418dp"></Button>
-    <Button android:id="@+id/BTCalcular" android:layout_height="wrap_content" android:text="Cálculos" android:layout_width="110dp" android:layout_x="110dp" android:layout_y="361dp"></Button>
-    <TextView android:text="Selecionar Cômodo" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="65dp" android:layout_y="28dp"></TextView>
+    <TextView android:text="Selecionar Cômodo" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_x="64dp" android:layout_y="5dp"></TextView>
+    <Button android:id="@+id/BTChamaSala" android:text="Sala" android:layout_height="55dp" android:layout_width="211dp" android:layout_x="57dp" android:layout_y="46dp"></Button>
+    <Button android:id="@+id/BTChamaQuarto" android:text="Quarto" android:layout_height="55dp" android:layout_width="211dp" android:layout_x="57dp" android:layout_y="105dp"></Button>
+    <Button android:id="@+id/BTChamaBanheiro" android:text="Banheiro" android:layout_height="55dp" android:layout_width="211dp" android:layout_x="58dp" android:layout_y="221dp"></Button>
+    <Button android:id="@+id/BTChamaCozinha" android:text="Cozinha" android:layout_height="55dp" android:layout_width="211dp" android:layout_x="57dp" android:layout_y="161dp"></Button>
+    <Button android:id="@+id/BTCalcular" android:text="Cálculos" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_x="60dp" android:layout_y="293dp"></Button>
+    <Button android:id="@+id/BTVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_x="162dp" android:layout_y="293dp"></Button>
     
     
 </AbsoluteLayout>
