--- a/dingo/res/layout/lista_quarto.xml
+++ b/dingo/res/layout/lista_quarto.xml
@@ -7,21 +7,15 @@
 	<Button android:background="@drawable/icon"
 		android:layout_height="wrap_content" android:layout_width="wrap_content"
 		android:layout_x="35dp" android:layout_y="242dp" android:id="@+id/BTChamaVentilador"></Button>
-	<Button android:background="@drawable/icon"
-		android:layout_height="wrap_content" android:layout_width="wrap_content"
-		android:layout_x="187dp" android:layout_y="242dp" android:id="@+id/BTChamaLampQuarto"></Button>
 	<TextView android:textColor="#000000" android:layout_height="wrap_content"
 		android:textAppearance="?android:attr/textAppearanceMedium"
 		android:layout_width="wrap_content" android:id="@+id/textView2"
 		android:text="TV" android:layout_x="51dp" android:layout_y="92dp"></TextView>
-	<TextView android:textColor="#000000" android:layout_height="wrap_content"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:layout_width="wrap_content" android:id="@+id/TextView03"
-		android:text="Lâmpada" android:layout_x="174dp" android:layout_y="213dp"></TextView>
-	<Button android:layout_height="wrap_content"
-		android:layout_width="wrap_content" android:layout_x="130dp" android:text="Voltar" android:layout_y="409dp" android:id="@+id/BTQuartoVoltar"></Button>
 	<TextView android:textColor="#000000" android:text="Ventilador" android:layout_height="wrap_content" android:id="@+id/TextView02" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="22dp" android:layout_y="216dp"></TextView>
-	<Button android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_x="194dp" android:layout_y="114dp" android:id="@+id/BTChamaPC"></Button>
-	<TextView android:textColor="#000000" android:text="Pc" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_x="209dp" android:layout_y="94dp"></TextView>
 	<TextView android:textColor="#000000" android:text="AparelhosQuarto" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_x="74dp" android:layout_y="20dp"></TextView>
+	<TextView android:text="Pc" android:layout_height="wrap_content" android:id="@+id/TextView01" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_x="242dp" android:layout_y="94dp"></TextView>
+	<Button android:id="@+id/BTChamaPC" android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_x="226dp" android:layout_y="114dp"></Button>
+	<TextView android:text="Lâmpada" android:layout_height="wrap_content" android:id="@+id/TextView03" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_x="209dp" android:layout_y="213dp"></TextView>
+	<Button android:id="@+id/BTChamaLampQuarto" android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_x="226dp" android:layout_y="238dp"></Button>
+	<Button android:id="@+id/BTQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="248dp" android:layout_y="320dp"></Button>
 </AbsoluteLayout>
