--- a/dingo/res/layout/pc.xml
+++ b/dingo/res/layout/pc.xml
@@ -4,11 +4,11 @@
 	<TextView android:textColor="#000000" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Computador" android:layout_width="wrap_content" android:layout_x="108dp" android:layout_y="8dp"></TextView>
 	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
 	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITPCTempo"></EditText>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="129dp" android:id="@+id/EDITPCPotencia">
-		
+	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITPCPotencia" android:layout_width="181dp" android:layout_x="112dp" android:layout_y="108dp">
+		<requestFocus></requestFocus>
 	</EditText>
-	<EditText android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="207dp" android:id="@+id/EDITPCQuant"></EditText>
-	<TextView android:textColor="#000000" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="Quantidade:" android:layout_width="wrap_content" android:layout_x="11dp" android:layout_y="222dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Potência:" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="145dp"></TextView>
-	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Voltar" android:layout_x="141dp" android:layout_y="436dp" android:id="@+id/BTPCVoltar"></Button>
+	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="40dp" android:layout_y="120dp"></TextView>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITPCQuant" android:layout_width="181dp" android:layout_x="113dp" android:layout_y="168dp"></EditText>
+	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="22dp" android:layout_y="181dp"></TextView>
+	<Button android:id="@+id/BTPCVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="253dp" android:layout_y="324dp"></Button>
 </AbsoluteLayout>
