--- a/dingo/res/layout/secador.xml
+++ b/dingo/res/layout/secador.xml
@@ -3,12 +3,12 @@
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgsecador">
 	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
 	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITSecadorTempo"></EditText>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="129dp" android:id="@+id/EDITSecadorPotencia">
-		
-	</EditText>
-	<EditText android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="114dp" android:layout_y="207dp" android:id="@+id/EDITSecadorQuant"></EditText>
-	<TextView android:textColor="#000000" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="Quantidade:" android:layout_width="wrap_content" android:layout_x="11dp" android:layout_y="222dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Potência:" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="145dp"></TextView>
-	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Voltar" android:layout_x="141dp" android:layout_y="436dp" android:id="@+id/BTSecadorVoltar"></Button>
 	<TextView android:layout_width="wrap_content" android:text="Secador" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_x="122dp" android:layout_y="6dp"></TextView>
+	<Button android:id="@+id/BTSecadorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="253dp" android:layout_y="330dp"></Button>
+	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITSecadorPotencia" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="108dp">
+		<requestFocus></requestFocus>
+	</EditText>
+	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="34dp" android:layout_y="122dp"></TextView>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSecadorQuant" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="162dp"></EditText>
+	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="24dp" android:layout_y="174dp"></TextView>
 </AbsoluteLayout>
